--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
         <title></title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="DnD/spreadsheet.css">
+        <link rel="stylesheet" href="spreadsheet.css">
     </head>
     <body>
+
+        <h2>Body</h2>
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
         
-        <script src="DnD/index.js" async defer></script>
+        <script src="index.js" async defer></script>
     </body>
 </html>
